crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-arrow-indexes_tpch_q6_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_q6"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                        |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: sum(lineitem.l_extendedprice * lineitem.l_discount) AS revenue                                                                                                                                                                                  |
|               |   Aggregate: groupBy=[[]], aggr=[[sum(lineitem.l_extendedprice * lineitem.l_discount)]]                                                                                                                                                                     |
|               |     Projection: lineitem.l_extendedprice, lineitem.l_discount                                                                                                                                                                                               |
|               |       Filter: lineitem.l_shipdate >= Date32("1994-01-01") AND lineitem.l_shipdate < Date32("1995-01-01") AND lineitem.l_discount >= Decimal128(0.05,15,2) AND lineitem.l_discount <= Decimal128(0.07,15,2) AND lineitem.l_quantity < Decimal128(24.00,15,2) |
|               |         TableScan: lineitem projection=[l_quantity, l_extendedprice, l_discount, l_shipdate]                                                                                                                                                                |
| physical_plan | ProjectionExec: expr=[sum(lineitem.l_extendedprice * lineitem.l_discount)@0 as revenue]                                                                                                                                                                     |
|               |   AggregateExec: mode=Final, gby=[], aggr=[sum(lineitem.l_extendedprice * lineitem.l_discount)]                                                                                                                                                             |
|               |     CoalescePartitionsExec                                                                                                                                                                                                                                  |
|               |       AggregateExec: mode=Partial, gby=[], aggr=[sum(lineitem.l_extendedprice * lineitem.l_discount)]                                                                                                                                                       |
|               |         FilterExec: l_shipdate@3 >= 1994-01-01 AND l_shipdate@3 < 1995-01-01 AND l_discount@2 >= 0.05 AND l_discount@2 <= 0.07 AND l_quantity@0 < 24.00, projection=[l_extendedprice@1, l_discount@2]                                                       |
|               |           SchemaCastScanExec                                                                                                                                                                                                                                |
|               |             BytesProcessedExec                                                                                                                                                                                                                              |
|               |               DataSourceExec: partitions=32, partition_sizes=[<redacted>]                                                                                                                                                                                   |
|               |                                                                                                                                                                                                                                                             |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
