crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-arrow-indexes_tpch_q9_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_q9"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                         |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: profit.nation ASC NULLS LAST, profit.o_year DESC NULLS FIRST                                                                                                                                                                                                           |
|               |   Projection: profit.nation, profit.o_year, sum(profit.amount) AS sum_profit                                                                                                                                                                                                 |
|               |     Aggregate: groupBy=[[profit.nation, profit.o_year]], aggr=[[sum(profit.amount)]]                                                                                                                                                                                         |
|               |       SubqueryAlias: profit                                                                                                                                                                                                                                                  |
|               |         Projection: nation.n_name AS nation, date_part(Utf8("YEAR"), orders.o_orderdate) AS o_year, lineitem.l_extendedprice * (Decimal128(1,20,0) - lineitem.l_discount) - partsupp.ps_supplycost * lineitem.l_quantity AS amount                                           |
|               |           Inner Join: supplier.s_nationkey = nation.n_nationkey                                                                                                                                                                                                              |
|               |             Projection: lineitem.l_quantity, lineitem.l_extendedprice, lineitem.l_discount, orders.o_orderdate, partsupp.ps_supplycost, supplier.s_nationkey                                                                                                                 |
|               |               Inner Join: lineitem.l_suppkey = supplier.s_suppkey                                                                                                                                                                                                            |
|               |                 Projection: lineitem.l_suppkey, lineitem.l_quantity, lineitem.l_extendedprice, lineitem.l_discount, orders.o_orderdate, partsupp.ps_supplycost                                                                                                               |
|               |                   Inner Join: lineitem.l_suppkey = partsupp.ps_suppkey, lineitem.l_partkey = partsupp.ps_partkey                                                                                                                                                             |
|               |                     Projection: lineitem.l_partkey, lineitem.l_suppkey, lineitem.l_quantity, lineitem.l_extendedprice, lineitem.l_discount, orders.o_orderdate                                                                                                               |
|               |                       Inner Join: lineitem.l_orderkey = orders.o_orderkey                                                                                                                                                                                                    |
|               |                         RightSemi Join: part.p_partkey = lineitem.l_partkey                                                                                                                                                                                                  |
|               |                           Projection: part.p_partkey                                                                                                                                                                                                                         |
|               |                             Filter: part.p_name LIKE LargeUtf8("%green%")                                                                                                                                                                                                    |
|               |                               TableScan: part projection=[p_partkey, p_name]                                                                                                                                                                                                 |
|               |                           TableScan: lineitem projection=[l_orderkey, l_partkey, l_suppkey, l_quantity, l_extendedprice, l_discount]                                                                                                                                         |
|               |                         TableScan: orders projection=[o_orderkey, o_orderdate]                                                                                                                                                                                               |
|               |                     TableScan: partsupp projection=[ps_partkey, ps_suppkey, ps_supplycost]                                                                                                                                                                                   |
|               |                 TableScan: supplier projection=[s_suppkey, s_nationkey]                                                                                                                                                                                                      |
|               |             TableScan: nation projection=[n_nationkey, n_name]                                                                                                                                                                                                               |
| physical_plan | SortPreservingMergeExec: [nation@0 ASC NULLS LAST, o_year@1 DESC]                                                                                                                                                                                                            |
|               |   ProjectionExec: expr=[nation@0 as nation, o_year@1 as o_year, sum(profit.amount)@2 as sum_profit]                                                                                                                                                                          |
|               |     SortExec: expr=[nation@0 ASC NULLS LAST, o_year@1 DESC], preserve_partitioning=[true]                                                                                                                                                                                    |
|               |       AggregateExec: mode=FinalPartitioned, gby=[nation@0 as nation, o_year@1 as o_year], aggr=[sum(profit.amount)]                                                                                                                                                          |
|               |         RepartitionExec: partitioning=Hash([nation@0, o_year@1], 32), input_partitions=32                                                                                                                                                                                    |
|               |           AggregateExec: mode=Partial, gby=[nation@0 as nation, o_year@1 as o_year], aggr=[sum(profit.amount)]                                                                                                                                                               |
|               |             ProjectionExec: expr=[n_name@0 as nation, date_part(YEAR, o_orderdate@1) as o_year, l_extendedprice@2 * (1 - l_discount@3) - ps_supplycost@4 * l_quantity@5 as amount]                                                                                           |
|               |               HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(n_nationkey@0, s_nationkey@5)], projection=[n_name@1, o_orderdate@5, l_extendedprice@3, l_discount@4, ps_supplycost@6, l_quantity@2]                                  |
|               |                 SchemaCastScanExec                                                                                                                                                                                                                                           |
|               |                   BytesProcessedExec                                                                                                                                                                                                                                         |
|               |                     DataSourceExec: partitions=1, partition_sizes=[<redacted>]                                                                                                                                                                                               |
|               |                 HashJoinExec: mode=CollectLeft, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(s_suppkey@0, l_suppkey@0)], projection=[l_quantity@3, l_extendedprice@4, l_discount@5, o_orderdate@6, ps_supplycost@7, s_nationkey@1]                               |
|               |                   SchemaCastScanExec                                                                                                                                                                                                                                         |
|               |                     BytesProcessedExec                                                                                                                                                                                                                                       |
|               |                       DataSourceExec: partitions=1, partition_sizes=[<redacted>]                                                                                                                                                                                             |
|               |                   HashJoinExec: mode=Partitioned, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(ps_suppkey@1, l_suppkey@1), (ps_partkey@0, l_partkey@0)], projection=[l_suppkey@4, l_quantity@5, l_extendedprice@6, l_discount@7, o_orderdate@8, ps_supplycost@2] |
|               |                     RepartitionExec: partitioning=Hash([ps_suppkey@1, ps_partkey@0], 32), input_partitions=32                                                                                                                                                                |
|               |                       SchemaCastScanExec                                                                                                                                                                                                                                     |
|               |                         BytesProcessedExec                                                                                                                                                                                                                                   |
|               |                           DataSourceExec: partitions=32, partition_sizes=[<redacted>]                                                                                                                                                                                        |
|               |                     RepartitionExec: partitioning=Hash([l_suppkey@1, l_partkey@0], 32), input_partitions=32                                                                                                                                                                  |
|               |                       HashJoinExec: mode=Partitioned, join_type=Inner, accumulator=MinMaxLeftAccumulator, on=[(o_orderkey@0, l_orderkey@0)], projection=[l_partkey@3, l_suppkey@4, l_quantity@5, l_extendedprice@6, l_discount@7, o_orderdate@1]                             |
|               |                         RepartitionExec: partitioning=Hash([o_orderkey@0], 32), input_partitions=32                                                                                                                                                                          |
|               |                           SchemaCastScanExec                                                                                                                                                                                                                                 |
|               |                             BytesProcessedExec                                                                                                                                                                                                                               |
|               |                               DataSourceExec: partitions=32, partition_sizes=[<redacted>]                                                                                                                                                                                    |
|               |                         RepartitionExec: partitioning=Hash([l_orderkey@0], 32), input_partitions=32                                                                                                                                                                          |
|               |                           HashJoinExec: mode=CollectLeft, join_type=RightSemi, accumulator=MinMaxLeftAccumulator, on=[(p_partkey@0, l_partkey@1)]                                                                                                                            |
|               |                             CoalescePartitionsExec                                                                                                                                                                                                                           |
|               |                               FilterExec: p_name@1 LIKE %green%, projection=[p_partkey@0]                                                                                                                                                                                    |
|               |                                 RepartitionExec: partitioning=RoundRobinBatch(32), input_partitions=1                                                                                                                                                                        |
|               |                                   SchemaCastScanExec                                                                                                                                                                                                                         |
|               |                                     BytesProcessedExec                                                                                                                                                                                                                       |
|               |                                       DataSourceExec: partitions=1, partition_sizes=[<redacted>]                                                                                                                                                                             |
|               |                             SchemaCastScanExec                                                                                                                                                                                                                               |
|               |                               BytesProcessedExec                                                                                                                                                                                                                             |
|               |                                 DataSourceExec: partitions=32, partition_sizes=[<redacted>]                                                                                                                                                                                  |
|               |                                                                                                                                                                                                                                                                              |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
