crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-arrow-indexes_tpch_simple_q3_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q3"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                        |
+---------------+-----------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: lineitem.l_comment, lineitem.l_partkey                                                                          |
|               |   Sort: lineitem.l_linenumber DESC NULLS FIRST, fetch=10                                                                    |
|               |     Projection: lineitem.l_comment, lineitem.l_partkey, lineitem.l_linenumber                                               |
|               |       TableScan: lineitem projection=[l_partkey, l_linenumber, l_comment]                                                   |
| physical_plan | ProjectionExec: expr=[l_comment@0 as l_comment, l_partkey@1 as l_partkey]                                                   |
|               |   SortPreservingMergeExec: [l_linenumber@2 DESC], fetch=10                                                                  |
|               |     SortExec: TopK(fetch=10), expr=[l_linenumber@2 DESC], preserve_partitioning=[true]                                      |
|               |       ProjectionExec: expr=[l_comment@2 as l_comment, l_partkey@0 as l_partkey, l_linenumber@1 as l_linenumber]             |
|               |         SchemaCastScanExec                                                                                                  |
|               |           BytesProcessedExec                                                                                                |
|               |             DataSourceExec: partitions=16, partition_sizes=[46, 46, 46, 46, 46, 46, 46, 46, 46, 46, 46, 46, 46, 45, 45, 45] |
|               |                                                                                                                             |
+---------------+-----------------------------------------------------------------------------------------------------------------------------+
